# Liner-Algebra

./: .gitignore  README.md
src/: CMakeLists.txt  linear_algebra.c  linear_algebra.h  main.c  matrices.h  utility.c  utility.h
